--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build": "node --no-deprecation rspack.js build",
     "print-info": "node -e \"require('./layouts').donationConsole()\"",
     "clear": "rimraf node_modules&&npm install  --registry=--registry=https://registry.npmmirror.com",
-    "update": "ncu -u --registry=https://registry.npmmirror.com&&pnpm i",
+    "update": "ncu -u --reject chalk,sass,sass-loader --registry=https://registry.npmmirror.com&&pnpm i",
     "push": "start ./push.sh"
   },
   "repository": {
@@ -26,13 +26,13 @@
   },
   "dependencies": {
     "@element-plus/icons-vue": "^2.3.1",
-    "axios": "^1.10.0",
+    "axios": "^1.11.0",
     "caniuse-lite": "^1.0.30001727",
     "clipboard": "^2.0.11",
     "core-js": "^3.44.0",
     "dayjs": "^1.11.13",
     "echarts": "5.6.0",
-    "element-plus": "^2.6.0",
+    "element-plus": "^2.10.4",
     "jsencrypt": "^3.3.2",
     "layouts": "file:layouts",
     "lodash": "^4.17.21",
@@ -41,30 +41,30 @@
     "mockjs": "^1.1.0",
     "nprogress": "^0.2.0",
     "qs": "^6.14.0",
-    "screenfull": "^5.2.0",
-    "vue": "^3.4.19",
-    "vue-echarts": "^6.7.3",
-    "vue-router": "^4.3.0",
+    "screenfull": "^6.0.2",
+    "vue": "^3.5.18",
+    "vue-echarts": "^7.0.3",
+    "vue-router": "^4.5.1",
     "vuex": "^4.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.28.0",
     "@babel/preset-env": "^7.28.0",
-    "@rspack/cli": "^1.4.6",
-    "@rspack/core": "^1.4.6",
+    "@rspack/cli": "^1.4.9",
+    "@rspack/core": "^1.4.9",
     "@rspack/dev-server": "^1.1.3",
-    "@vue/compiler-sfc": "^3.4.19",
+    "@vue/compiler-sfc": "^3.5.18",
     "babel-loader": "^10.0.0",
     "body-parser": "^2.2.0",
-    "chalk": "^4.1.2",
+    "chalk": "4.1.2",
     "chokidar": "^4.0.3",
     "css-loader": "^7.1.2",
     "html-rspack-plugin": "^6.1.2",
     "path-browserify": "^1.0.1",
-    "sass": "^1.71.1",
-    "sass-loader": "^14.1.1",
+    "sass": "1.71.1",
+    "sass-loader": "14.1.1",
     "style-loader": "^4.0.0",
-    "vue-loader": "^16.0.0",
+    "vue-loader": "^17.4.2",
     "vue-template-compiler": "^2.7.16"
   },
   "keywords": [
