--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "vue": "^3.5.18",
     "vue-echarts": "^7.0.3",
     "vue-router": "^4.5.1",
+    "vuedraggable": "^2.24.3",
     "vuex": "^4.1.0"
   },
   "devDependencies": {
