--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "css-loader": "^7.1.2",
     "html-rspack-plugin": "^6.1.2",
     "path-browserify": "^1.0.1",
+    "rimraf": "^6.0.1",
     "sass": "1.71.1",
     "sass-loader": "14.1.1",
     "style-loader": "^4.0.0",
