--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "vue-admin-better",
-  "version": "3.0.0",
+  "name": "vue3-admin-better",
+  "version": "3.0.1",
   "author": "zxwk1998",
   "participants": [],
   "homepage": "https://vuejs-core.cn",
@@ -28,12 +28,12 @@
   "dependencies": {
     "@element-plus/icons-vue": "^2.3.2",
     "axios": "^1.13.2",
-    "caniuse-lite": "^1.0.30001757",
+    "caniuse-lite": "^1.0.30001759",
     "clipboard": "^2.0.11",
     "core-js": "^3.47.0",
     "dayjs": "^1.11.19",
     "echarts": "6.0.0",
-    "element-plus": "^2.11.8",
+    "element-plus": "^2.12.0",
     "jsencrypt": "^3.5.4",
     "layouts": "file:layouts",
     "lodash": "^4.17.21",
@@ -52,8 +52,8 @@
   "devDependencies": {
     "@babel/core": "^7.28.5",
     "@babel/preset-env": "^7.28.5",
-    "@rspack/cli": "^1.6.5",
-    "@rspack/core": "^1.6.5",
+    "@rspack/cli": "^1.6.6",
+    "@rspack/core": "^1.6.6",
     "@rspack/dev-server": "^1.1.4",
     "@vue/compiler-sfc": "^3.5.25",
     "archiver": "^7.0.1",
